little cleanup; adding 'a' to the dappre link; decreasing logo size;